--- a/OeuvresJDBC/public_html/index.html
+++ b/OeuvresJDBC/public_html/index.html
@@ -18,7 +18,7 @@
         <script type="text/javascript" src="lib/angular/angular-animate.js"></script>
         <script type="text/javascript" src="lib/angular/angular-translate.js"></script>
     </head>
-    <body ng-controller="" class="body">
+    <body ng-controller="MainCtrl as mainCtrl" class="body">
         <div class="container">
             <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
                 <div class="container-fluid">
