--- a/OeuvresJDBC/public_html/index.html
+++ b/OeuvresJDBC/public_html/index.html
@@ -16,6 +16,11 @@
         
         <script type="text/javascript" src="lib/angular/angular-route.js"></script>
         <script type="text/javascript" src="lib/angular/angular-animate.js"></script>
+
+        <script type="text/javascript" src="scripts/app.js"></script>
+        <script type="text/javascript" src="scripts/controllers.js"></script>
+        <script type="text/javascript" src="scripts/services.js"></script>
+        
         <script type="text/javascript" src="lib/angular/angular-translate.js"></script>
     </head>
     <body ng-controller="MainCtrl as mainCtrl" class="body">
